# Processamento_Digital_de_Imagens_Unidade_II

./: .gitignore  relatorio.adoc
Domínio da Frequência/Filtragem no Domínio da Frequência/: dftfilter.cpp
Domínio da Frequência/Transformada Discreta de Fourier/: filestorage.cpp
Extração de Características/Extração de Características Momentos de Hu para contornos/: momentos-contornos.cpp
Extração de Características/Extração de Características Momentos de Hu para regiões/: CMakeLists.txt  momentos-regioes.cpp
Extração de Características/Extração de Contornos/: CMakeLists.txt  contornos.cpp  contornos_edit.cpp
Segmentação de Imagens/Detecção de Bordas com o Algoritmo de Canny/: CMakeLists.txt  cannypoints.cpp
Segmentação de Imagens/Limiarização/: CMakeLists.txt  threshold2.cpp
